Example JavaFX code, for JFX11.  Works from the gradle command line but not from IntelliJ (yay modules)