@@ -1,22 +1,52 @@
-plugins {
-    id 'org.springframework.boot' version '2.0.5.RELEASE'
+// doesn't work with the new plugin syntax: https://github.com/google/osdetector-gradle-plugin/issues/15
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+    }
 }
+//plugins {
+//    id 'com.google.osdetector' version '1.6.0'
+//}
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: 'application'
+apply plugin: 'com.google.osdetector'
 
+sourceCompatibility = JavaVersion.VERSION_11
 group = 'com.example.demo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_11
+mainClassName = 'com.mechanitis.demo.client.HelloFX'
 
 repositories {
     mavenCentral()
 }
 
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile "org.openjfx:javafx-base:11:$platform"
+    compile "org.openjfx:javafx-graphics:11:$platform"
+    compile "org.openjfx:javafx-controls:11:$platform"
 }
+
+//because Java 9
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+
